1.09 (2009-05-18)

  - move all decryption to one place; support decrypting metafiles.
    (Stephane Alnet, stephane@shimaore.net, Chris Anderson, cva@pobox.com)

  - added CloudFiles target to enable backups to Rackspace/Mosso's online
    data storage service. (William Wolf)

1.08 (2009-04-26)

  - make brackup-target --verbose prune and gc more verbose (gavincarr)

  - add a --interactive option to brackup-target gc (gavincarr) 

  - add a --source option to brackup-target prune, to restrict a prune 
    run to a particular source (gavincarr)
   
  - update Amazon target to handle new ISO8601 modify timestamps (Ben 
    Schumacher)

1.07 (2009-04-04)

  - fix utime warnings on restore (Gavin Carr)

  - actually strip non-ASCII characters (gary.richardson@gmail.com)

  - smarts to filesystem target, noticed when using sshfs (slow filesystem).
    does .partial files now, is smart about not overwriting existing chunk
    that's there, etc.

  - bradfitz: optional smart mp3 chunking. (start of file-aware chunking
    strategies)  with smart mp3 chunking, the ID3 tags are kept in separate
    chunks, so future re-tagging of your music won't force iterative backups
    to re-upload all the music bytes again... just the updated
    metadata (tiny)

  - Add a new option to the Amazon S3 target to force a prefix to be 
    added to the names of any saved backups.
    It might be worth moving this up into Brackup itself at some point,
    since it's probably useful for other network-based targets.

  - Fix Restore.pm to use binmode for operating systems that care about
    such things.

  - Added a first whack at a FUSE filesystem for mounting a backup
    as a real filesystem.

  - Added FTP target.

  - added the aws_location option to set the datacenter location for
    S3 targets. from Alessandro Ranellucci <aar@cpan.org>.
    The Amazon S3 target now depends on version 0.41 of Net::Amazon::S3.

  - fixed tempfile creation in gc (orphaned files were left in the