@@ -1,3 +1,6 @@
+
+  - add chunkpath and size methods to Amazon S3 target (gavincarr)
+
 1.09 (2009-05-18)
 
   - move all decryption to one place; support decrypting metafiles.
